Name:                kontiki
Version:             0.0.0.0
Synopsis:            An implementation of the Raft consensus protocol
Description:         A model-only implementation of the Raft consensus protocol.
Homepage:            http://github.com/NicolasT/kontiki

Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Copyright:           (c) 2013, Nicolas Trangez

License:             BSD3
License-File:        LICENSE

Category:            Network
Build-Type:          Simple
Cabal-Version:       >=1.8

Source-Repository head
  Type:     git
  location: git://github.com/NicolasT/kontiki.git

Library
  Exposed-Modules:     Network.Kontiki.Raft
                     , Data.Kontiki.MemLog
  Other-Modules:       Network.Kontiki.Types
                     , Network.Kontiki.Log
                     , Network.Kontiki.Monad
                     , Network.Kontiki.Raft.Follower
                     , Network.Kontiki.Raft.Candidate
                     , Network.Kontiki.Raft.Leader
                     , Network.Kontiki.Raft.Utils
  Build-Depends:       base
                     , mtl
                     , bytestring
                     , containers
                     , binary
                     , lens 
                     , QuickCheck 
  Hs-Source-Dirs:      src
  Ghc-Options:         -Wall -fwarn-incomplete-patterns

Executable kontiki-demo
  Main-Is:             demo.hs
  Build-Depends:       base
                     , mtl
                     , stm 
                     , random 
                     , bytestring
                     , containers
                     , hslogger
                     , kontiki
  Hs-Source-Dirs:      bin
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded

Executable kontiki-udp
  Main-Is:             udp.hs
  Other-Modules:       Control.STM.Timer
                     , Data.Conduit.RollingQueue
  Build-Depends:       base
                     , mtl
                     , transformers
                     , bytestring
                     , stm
                     , containers
                     , random
                     , network
                     , binary
                     , conduit
                     , conduit-extra
                     , streaming-commons
                     , rolling-queue
                     , lens
                     , kontiki
  Hs-Source-Dirs:      bin
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded

Test-Suite kontiki-test
  Type:                exitcode-stdio-1.0
  Main-Is:             kontiki-test.hs
  Build-Depends:       base
                     , mtl
                     , binary
                     , test-framework
                     , test-framework-quickcheck2
                     , tasty, tasty-hspec, hspec, QuickCheck
                     , kontiki
  Hs-Source-Dirs:      test
  Ghc-Options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
