Cabal-Version:      3.0
Build-Type:         Simple

Name:               kontiki
Version:            0.0.1.0

Synopsis:           An implementation of the Raft consensus protocol
Description:        Kontiki is distributed database, based on the Raft consensus protocol.

Homepage:           https://github.com/NicolasT/kontiki
Bug-Reports:        https://github.com/NicolasT/kontiki/issues
License:            GPL-3.0-or-later
License-File:       LICENSE
Author:             Nicolas Trangez
Maintainer:         ikke@nicolast.be
Copyright:          (c) 2022, Nicolas Trangez

Category:           Network
Stability:          experimental

Extra-Doc-Files:    CHANGELOG.md

Tested-With:        GHC ==8.10.5

Source-Repository head
  Type:             git
  Location:         https://github.com/NicolasT/kontiki.git
  Branch:           reboot

Common warnings
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wmissing-home-modules
    -Widentities
    -Wredundant-constraints
    -Wcpp-undef
    -Wmissing-export-lists


Library
  import:           warnings

  Hs-Source-Dirs:   src
  Exposed-Modules:  Kontiki
                  , Kontiki.Raft
                  , Kontiki.Raft.Class
  Default-Language: Haskell2010
  Other-Extensions:
    DeriveFunctor
    FlexibleContexts
    GeneralizedNewtypeDeriving
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  Build-Depends:
    base ^>=4.14.2.0,
    hspec ^>=2.10.7,
    hspec-expectations-lifted ^>=0.10.0,
    uuid ^>=1.3.15,
    QuickCheck ^>=2.14.2,
    quickcheck-classes-base ^>=0.6.2.0

Executable kontiki
  import:           warnings

  Hs-Source-Dirs:   app
  Main-Is:          Main.hs
  Default-Language: Haskell2010

  Build-Depends:
    base ^>=4.14.2.0,
    kontiki

Test-Suite kontiki-test
  import:           warnings

  Hs-Source-Dirs:   test
  Main-Is:          Main.hs
  Default-Language: Haskell2010
  Type:             exitcode-stdio-1.0

  Build-Depends:
    base ^>=4.14.2.0,
    kontiki,
    hspec ^>=2.10.7,
    transformers ^>=0.5.6.2,
