Name:          kontiki-raft-types
Version:       0.0.0.0
Synopsis:      An implementation of the Raft consensus protocol - Types
Description:
  This package is part of Kontiki, an implementation of the Raft consensus
  protocol.
  .
  It contains basic implementations of all types defined through classes in
  'kontiki-raft-classes', merely for testing and REPL purposes.
Category:      Kontiki
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/NicolasT/kontiki/tree/master/kontiki-raft-types#readme
Bug-Reports:   https://github.com/NicolasT/kontiki/labels/kontiki-raft-types

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/NicolasT/kontiki.git
  Subdir:   kontiki-raft-types

Library
  Build-Depends:   base >= 4.9 && < 4.10
                 , data-default-class >= 0.1 && < 0.2
                 , lens >= 4.15 && < 4.16
                 , monad-logger >= 0.3 && < 0.4
                 , transformers >= 0.5 && < 0.6
                 , kontiki-raft-classes
  Exposed-Modules: Kontiki.Raft.Types
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists

Test-Suite kontiki-raft-types-test
  Type:           exitcode-stdio-1.0
  Main-Is:        Main.hs
  Build-Depends:  base >= 4.9 && < 4.10
                , data-default-class >= 0.1 && < 0.2
                , monad-logger >= 0.3 && < 0.4
                , transformers >= 0.5 && < 0.6
                , kontiki-raft
                , kontiki-raft-types
  Hs-Source-Dirs: test
  Ghc-Options:    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
