Name:          kontiki-raft
Version:       0.0.0.0
Synopsis:      An implementation of the Raft consensus protocol - Protocol
Description:
  This package is part of Kontiki, an implementation of the Raft consensus
  protocol.
  .
  It contains implementations of the Raft protocol, i.e. the behaviors of
  various node within a cluster in response to events.
Category:      Kontiki
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/NicolasT/kontiki/tree/master/kontiki-raft#readme
Bug-Reports:   https://github.com/NicolasT/kontiki/labels/kontiki-raft

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/NicolasT/kontiki.git
  Subdir:   kontiki-raft

Library
  Build-Depends:   aeson >= 1.1 && < 1.2
                 , base >= 4.9 && < 4.10
                 , containers >= 0.5 && < 0.6
                 , data-default-class >= 0.1 && < 0.2
                 , indexed >= 0.1 && < 0.2
                 , indexed-extras >= 0.2 && < 0.3
                 , lens >= 4.15 && < 4.16
                 , monad-logger >= 0.3 && < 0.4
                 , mtl >= 2.2 && < 2.3
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
                 , kontiki-raft-classes
  Exposed-Modules: Kontiki.Raft
                 , Kontiki.Raft.Internal.AllServers
                 , Kontiki.Raft.Internal.Candidate
                 , Kontiki.Raft.Internal.Follower
                 , Kontiki.Raft.Internal.Leader
                 , Kontiki.Raft.Internal.State
  Other-Modules:   Kontiki.Raft.Internal.Orphans
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g

Test-Suite kontiki-raft-test
  Type:            exitcode-stdio-1.0
  Main-Is:         Main.hs
  Other-Modules:   Kontiki.Raft.Internal.AllServers.Test
                 , Kontiki.Raft.Mock
                 , Kontiki.Raft.Orphans
                 , Kontiki.Raft.Test
                 , Kontiki.Raft.Types
  Build-Depends:   base >= 4.9 && < 4.10
                 , containers >= 0.5 && < 0.6
                 , data-default >= 0.7 && < 0.8
                 , hspec-expectations >= 0.8 && < 0.9
                 , indexed-extras >= 0.2 && < 0.3
                 , lens >= 4.15 && < 4.16
                 , monad-logger >= 0.3 && < 0.4
                 , monad-mock >= 0.1 && < 0.2
                 , mtl >= 2.2 && < 2.3
                 , QuickCheck >= 2.9 && < 2.10
                 , tasty >= 0.11 && < 0.12
                 , tasty-hspec >= 1.1 && < 1.2
                 , transformers >= 0.5 && < 0.6
                 , kontiki-raft
                 , kontiki-raft-classes
  Hs-Source-Dirs:  test
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -g
