Name:          kontiki
Version:       0.0.0.0
Synopsis:      An implementation of the Raft consensus protocol - Server
Description:
  This package is part of Kontiki, an implementation of the Raft consensus
  protocol.
  .
  It contains an implementation of a distributed consistent key-value store.
Category:      Kontiki
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/NicolasT/kontiki/tree/master/kontiki#readme
Bug-Reports:   https://github.com/NicolasT/kontiki/labels/kontiki

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/NicolasT/kontiki.git
  Subdir:   kontiki

Library
  Build-Depends:   aeson >= 1.1 && < 1.2
                 , base >= 4.9 && < 4.10
                 , bytestring >= 0.10 && < 0.11
                 , clock >= 0.7 && < 0.8
                 , data-default >= 0.7 && < 0.8
                 , ekg >= 0.4 && < 0.5
                 , ekg-core >= 0.1 && < 0.2
                 , exceptions >= 0.8 && < 0.9
                 , grpc-haskell >= 0.0 && < 0.1
                 , katip >= 0.5 && < 0.6
                 , lens >= 4.15 && < 4.16
                 , leveldb-haskell >= 0.6 && < 0.7
                 , lifted-async >= 0.9 && < 0.10
                 , lifted-base >= 0.2 && < 0.3
                 , monad-control >= 1.0 && < 1.1
                 , monad-logger >= 0.3 && < 0.4
                 , monad-logger-katip >= 0.0 && < 0.1
                 , mtl >= 2.2 && < 2.3
                 , network >= 2.6 && < 2.7
                 , proto3-suite >= 0.1 && < 0.2
                 , proto3-wire >= 1.0 && < 1.1
                 , QuickCheck >= 2.9 && < 2.10
                 , quickcheck-text >= 0.1 && < 0.2
                 , safe-exceptions >= 0.1 && < 0.2
                 , stm >= 2.4 && < 2.5
                 , suspend >= 0.2 && < 0.3
                 , text >= 1.2 && < 1.3
                 , timers >= 0.2 && < 0.3
                 , transformers >= 0.5 && < 0.6
                 , unordered-containers >= 0.2 && < 0.3
                 , vector >= 0.12 && < 0.13
                 , kontiki-raft
                 , kontiki-raft-classes
  Exposed-Modules: Kontiki.Protocol.GRPC.Node
                 , Kontiki.Protocol.Types
                 , Kontiki.Server
                 , Kontiki.Server.EKG
                 , Kontiki.Server.GRPC
                 , Kontiki.State.Persistent
                 , Kontiki.State.Volatile
                 , Kontiki.Timers
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -g

Executable kontiki
  Build-Depends:   base >= 4.9 && < 4.10
                 , kontiki
  Main-Is:         kontiki.hs
  Hs-Source-Dirs:  bin
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -g -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

Executable kontiki-client
  Build-Depends:   base >= 4.9 && < 4.10
                 , data-default >= 0.7 && < 0.8
                 , grpc-haskell >= 0.0 && < 0.1
                 , lens >= 4.15 && < 4.16
                 , kontiki
                 , kontiki-raft-classes
  Main-Is:         kontiki-client.hs
  Hs-Source-Dirs:  bin
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -g -threaded -rtsopts

Test-Suite kontiki-test
  Type:            exitcode-stdio-1.0
  Main-Is:         Main.hs
  Other-Modules:   Kontiki.Protocol.Node.Test
                 , Kontiki.Protocol.Types.Test
                 , Kontiki.State.Persistent.Test
                 , Kontiki.Test.Utils
  Build-Depends:   base >= 4.9 && < 4.10
                 , bytestring >= 0.10 && < 0.11
                 , hedgehog >= 0.5 &&< 0.6
                 , hedgehog-quickcheck >= 0.1 && < 0.2
                 , hspec >= 2.4 && < 2.5
                 , hspec-expectations >= 0.8 && < 0.9
                 , leveldb-haskell >= 0.6 && < 0.7
                 , monad-logger >= 0.3 && < 0.4
                 , proto3-suite >= 0.1 && < 0.2
                 , QuickCheck >= 2.9 && < 2.10
                 , tasty >= 0.11 && < 0.12
                 , tasty-hedgehog >= 0.1 && < 0.2
                 , tasty-hspec >= 1.1 && < 1.2
                 , temporary >= 1.2 && < 1.3
                 , text >= 1.2 && < 1.3
                 , kontiki
                 , kontiki-raft
                 , kontiki-raft-classes
  Hs-Source-Dirs:  test
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -g -threaded -rtsopts -with-rtsopts=-N
